@@ -21,7 +21,7 @@ from flumotion.common import errors, gstreamer
 T_ = gettexter('flumotion-flash')
 
 
-class MP3Encoder(feedcomponent.ParseLaunchComponent):
+class MP3Encoder(feedcomponent.EncoderComponent):
     checkTimestamp = True
     checkOffset = True
 
