@@ -15,7 +15,7 @@
 from flumotion.component import feedcomponent
 
 
-class FLVMuxer(feedcomponent.MultiInputParseLaunchComponent):
+class FLVMuxer(feedcomponent.MuxerComponent):
     checkOffset = True
 
     def get_muxer_string(self, properties):
