@@ -1,3 +1,14 @@
+2010-05-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
+	reviewed by: jribas
+
+	* flumotion/component/encoders/aac/aac.py:
+	* flumotion/component/encoders/flv/flv.py:
+	* flumotion/component/encoders/mp3/mp3.py:
+	* flumotion/component/encoders/vp6/vp6.py:
+	* flumotion/component/muxers/flv/flv.py:
+	Reconfigurable encoders and muxers
+
 2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	* configure.ac:
